// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preset creation works as planned:  creation of Cameras 1`] = `
Array [
  Object {
    "_id": "c1bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c1",
    "name": "Camera#1",
  },
  Object {
    "_id": "c2bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c2",
    "name": "Camera#2",
  },
  Object {
    "_id": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c3",
    "name": "Camera#3",
  },
]
`;

exports[`Preset creation works as planned:  creation of Projects  1`] = `
Array [
  Object {
    "_id": "b19999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "isActive": true,
    "name": "pn1",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u1",
      },
      Object {
        "cameras": Array [
          "c2bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u2",
      },
    ],
    "operators": Array [
      "u1",
      "u2",
    ],
    "shot": 1,
  },
  Object {
    "_id": "b29999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "isActive": true,
    "name": "pn2",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u3",
      },
      Object {
        "cameras": Array [
          "c2bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u1",
      },
    ],
    "operators": Array [
      "u1",
      "u3",
    ],
    "shot": 8,
  },
  Object {
    "_id": "b39999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "isActive": true,
    "name": "pn3",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u3",
      },
      Object {
        "cameras": Array [
          "c3bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u2",
      },
    ],
    "operators": Array [
      "u2",
      "u3",
    ],
    "shot": 6,
  },
]
`;

exports[`Preset creation works as planned:  fetched presets  1`] = `
Object {
  "currentPage": Object {},
  "dirtyCollections": Object {
    "presets": false,
  },
  "doingQuery": Object {},
  "lists": Object {
    "presetModel": Object {
      "data": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 5,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 7,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 6,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 8,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 9,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 10,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 11,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 12,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 13,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 14,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 15,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 16,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 17,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 18,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb1998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 19,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 20,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 21,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 22,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 23,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 24,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 25,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 26,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 27,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 28,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb2998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 29,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 30,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 31,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 32,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 33,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 34,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 35,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 36,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 37,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 38,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb3998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 39,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 40,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 41,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 42,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 43,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 44,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 45,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 46,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 47,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 48,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb4998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 49,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 50,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 51,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 52,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 53,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 54,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 55,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 56,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 57,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 58,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb5998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 59,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 60,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 61,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 62,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 63,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 64,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 65,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 66,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 67,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 68,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb6998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 69,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 70,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 71,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 72,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 73,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 74,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 75,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 76,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 77,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 78,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb7998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 79,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 80,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 81,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 82,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 83,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 84,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 85,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 86,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 87,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 88,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb8998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 89,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 90,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 91,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 92,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 93,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 94,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9598765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 95,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9698765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 96,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9798765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 97,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9898765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 98,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbb9998765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 99,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 5,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 6,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 7,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 8,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbbb998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 9,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 10,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 11,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 12,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 13,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 14,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 15,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 16,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 17,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 18,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb1998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 19,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 20,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 21,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 22,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 23,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 24,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 25,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 26,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 27,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 28,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb2998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 29,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 30,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 31,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 32,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 33,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 34,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 35,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 36,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 37,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 38,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb3998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 39,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 40,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 41,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 42,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 43,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 44,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 45,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 46,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 47,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 48,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb4998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 49,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 50,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 51,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 52,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 53,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 54,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 55,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 56,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 57,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 58,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb5998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 59,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 60,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 61,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 62,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 63,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 64,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 65,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 66,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 67,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 68,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb6998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 69,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 70,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 71,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 72,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 73,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 74,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 75,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 76,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 77,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 78,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb7998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 79,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 80,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 81,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 82,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 83,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 84,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 85,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 86,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 87,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 88,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb8998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 89,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9098765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 90,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9198765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 91,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9298765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 92,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9398765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 93,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9498765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 94,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9598765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 95,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9698765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 96,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9798765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 97,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9898765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 98,
          "project": "-",
        },
        Object {
          "_id": "c2bbbbbbbbbbbbbbb9998765",
          "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
          "number": 99,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 5,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 6,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 7,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 8,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbbb998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 9,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 10,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 11,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 12,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 13,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 14,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 15,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 16,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 17,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 18,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb1998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 19,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 20,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 21,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 22,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 23,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 24,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 25,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 26,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 27,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 28,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb2998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 29,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 30,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 31,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 32,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 33,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 34,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 35,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 36,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 37,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 38,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb3998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 39,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 40,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 41,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 42,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 43,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 44,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 45,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 46,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 47,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 48,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb4998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 49,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 50,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 51,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 52,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 53,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 54,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 55,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 56,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 57,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 58,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb5998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 59,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 60,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 61,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 62,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 63,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 64,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 65,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 66,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 67,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 68,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb6998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 69,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 70,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 71,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 72,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 73,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 74,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 75,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 76,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 77,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 78,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb7998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 79,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 80,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 81,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 82,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 83,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 84,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 85,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 86,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 87,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 88,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb8998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 89,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9098765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 90,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9198765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 91,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9298765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 92,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9398765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 93,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9498765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 94,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9598765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 95,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9698765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 96,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9798765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 97,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9898765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 98,
          "project": "-",
        },
        Object {
          "_id": "c3bbbbbbbbbbbbbbb9998765",
          "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
          "number": 99,
          "project": "-",
        },
      ],
      "limit": 400,
      "skip": 0,
      "total": 300,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "presetModel": 1,
  },
  "pageSize": 400,
  "previousQuery": Object {
    "presetModel": Object {
      "$limit": 400,
      "$skip": 0,
    },
  },
}
`;

exports[`Preset creation works as planned:  first available ID  1`] = `"c1bbbbbbbbbbbbbbbb098765"`;

exports[`Preset creation works as planned: After using the utility function 1`] = `
Object {
  "createState": Object {
    "assistantForm": "c1bbbbbbbbbbbbbbbb098765",
    "freePresetGetter.assistantForm": "c2bbbbbbbbbbbbbbbb098765",
  },
  "currentlyEditing": "b19999999999999999999999",
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "undefined": "c2bbbbbbbbbbbbbbbb098765",
    },
    "presets": Object {
      "c1bbbbbbbbbbbbbbbb098765": Object {
        "_id": "c1bbbbbbbbbbbbbbbb098765",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "number": 0,
        "project": "b19999999999999999999999",
      },
      "c2bbbbbbbbbbbbbbbb098765": Object {
        "_id": "c2bbbbbbbbbbbbbbbb098765",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "number": 0,
        "project": "b19999999999999999999999",
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "c1bbbbbbbbbbbbbbbb098765": -2077750800000,
    "c2bbbbbbbbbbbbbbbb098765": -2077750800000,
    "undefined": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`Preset creation works as planned: After using the utility function 2`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "": Object {
      "preset": "c2bbbbbbbbbbbbbbbb098765",
    },
    "assistantForm": Object {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "project": "b19999999999999999999999",
    },
    "authForm": Object {
      "email": "u1",
      "password": "",
      "strategy": "local",
    },
    "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
    "freePresetGetter": Object {
      "assistantForm": Object {
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "project": "b19999999999999999999999",
      },
    },
  },
  "loading": Object {
    "assistantForm": false,
    "freePresetGetter": Object {
      "assistantForm": false,
    },
    "presetModel": false,
  },
}
`;

exports[`Preset creation works as planned: Before preset is being pushed via real-time 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`Preset creation works as planned: Before using the utility function 1`] = `
Object {
  "createState": Object {
    "assistantForm": "c1bbbbbbbbbbbbbbbb098765",
  },
  "currentlyEditing": "",
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "undefined": "c1bbbbbbbbbbbbbbbb098765",
    },
    "presets": Object {
      "c1bbbbbbbbbbbbbbbb098765": Object {
        "_id": "c1bbbbbbbbbbbbbbbb098765",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "number": 0,
        "project": "b19999999999999999999999",
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "c1bbbbbbbbbbbbbbbb098765": -2077750800000,
    "undefined": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`Preset creation works as planned: after preset has been pushed via real-time 1`] = `
Object {
  "createState": Object {
    "assistantForm": "c1bbbbbbbbbbbbbbbb098765",
  },
  "currentlyEditing": "",
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "undefined": "c1bbbbbbbbbbbbbbbb098765",
    },
    "presets": Object {
      "c1bbbbbbbbbbbbbbbb098765": Object {
        "_id": "c1bbbbbbbbbbbbbbbb098765",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "number": 0,
        "project": "b19999999999999999999999",
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "c1bbbbbbbbbbbbbbbb098765": -2077750800000,
    "undefined": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;
